# weatherv2

./: .gitignore  README.md  render.yaml
.github/workflows/: keep-alive.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: cache.py  config.py  main.py  services.py
backend/app/geomet/: client.py  models.py  normalize.py
backend/app/routers/: alerts.py  aqhi.py  briefing.py  outlook.py  overlays.py  stations.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertSummary.tsx  AlertsList.tsx  CityAutocomplete.tsx  CurrentConditions.tsx  DetailPanel.tsx  ForecastCards.tsx  Header.tsx  HourlyChart.tsx  HubCard.tsx  LayerControl.tsx  MapView.tsx  SearchBar.tsx
frontend/src/hooks/: queries.ts
frontend/src/lib/: api.ts  format.ts  mapStyle.ts  store.ts  types.ts  weather.ts
frontend/src/pages/: BriefingPage.tsx  MapPage.tsx  OutlookPage.tsx
